--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 *{
-  font-family: sans-serif;
+  font-family: 'Poppins', sans-serif;
 }
 body{
   margin:0;
@@ -9,7 +9,7 @@ body{
 .result{
   height: 150px;
   color: rgb(5, 150, 5);
-  background-color: rgb(245, 233, 233);
+  background-color: ;
   width: 100%;
   margin:auto;
   border-radius: 7px;
@@ -68,7 +68,7 @@ body{
   padding:10px;
 }
 .myfield{
-  width: 100%;
+  width: 95%;
   padding:10px;
   background-color: none;
   border-bottom: 1px solid dodgerblue;
