--- a/css/style.css
+++ b/css/style.css
@@ -9,22 +9,25 @@ body{
 .result{
   height: 150px;
   color: rgb(5, 150, 5);
-  background-color: ;
   width: 100%;
   margin:auto;
   border-radius: 7px;
   font-size: 20px;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-evenly;
   /* box-shadow: 5px 5px 15px 5px black; */
 
 }
 #principle-display{
-   height: 30%;
+   height: 20%;
    padding: 10px;
 }
 #loan{
-  height: 30%;
+  height: 20%;
+  padding: 10px;
+}
+#per-month{
+  height: 20%;
   padding: 10px;
 }
 
@@ -47,7 +50,7 @@ body{
   padding: 10px;
 }
 .calculator{
-  height: 80vh;
+  height: 90vh;
   /* background: black; */
 
 }
@@ -105,4 +108,63 @@ body{
   text-transform: uppercase;
   border-radius: 7px;
   text-decoration: none;
+}
+.previous-calcs{
+  margin-top: 100px;
+  padding: 20px;
+  border:5px solid dodgerblue
+}
+
+.table{
+  width: 80%;
+  margin: auto;
+}
+
+.table th{
+  background-color: dodgerblue;
+  color: white;
+  padding: 10px;
+}
+
+@media(max-width:600px){
+    .calculator{
+      padding: 0;
+    }
+    .form{
+      width: 100%;
+    }
+    .result{
+      font-size: 15px;
+    }
+    .loan{
+      font-size: 20px;
+    }
+    .interest{
+      font-size: 20px;
+    }
+    .principle{
+      font-size: 20px;
+    }
+    .result{
+      display: block;
+      padding: 0;
+      height:300px;
+    }
+    #principle-display{
+      padding: 0;
+      font-size: 16px;
+      height: 20%;
+    }
+    #loan{
+      padding: 0;
+      height: 20%;
+    }
+    #interest{
+      padding: 0;
+      height: 20%;
+    }
+    #per-month{
+      padding: 0;
+      height: 20%;
+    }
 }
