--- a/css/style.css
+++ b/css/style.css
@@ -126,6 +126,11 @@ body{
   padding: 10px;
 }
 
+.table td{
+  padding: 5px;
+  border: 1px solid dodgerblue;
+}
+
 @media(max-width:600px){
     .calculator{
       padding: 0;
